Working propely and eslint is done, jest left

--- a/client/styling.css
+++ b/client/styling.css
@@ -29,10 +29,8 @@ li {
     color: white;
 }
 
-#submit {
-    color :black;
-}
 
-#sub-name, #sub-ability, #sub-class{
+
+#sub-name, #sub-ability, #sub-class #submit{
     color: black;
 }
